<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.fargments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/heder_bloc"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/colorPrimary" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settings_user_photo"
                android:layout_width="@dimen/settings_user_foto_width"
                android:layout_height="@dimen/settings_user_foto_hight"
                android:src="@drawable/default_photo"

                app:civ_border_width="@dimen/settings_user_foto_border"
                app:civ_border_color="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/horizontal_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.2"
                android:layout_marginTop="16dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_name"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/settings_user_photo"
                app:layout_constraintTop_toTopOf="@+id/settings_user_photo"
                app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:textSize="@dimen/normal_text"
                android:id="@+id/settings_username"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_status"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/small_text"
                android:layout_marginEnd="208dp"
                app:layout_constraintTop_toBottomOf="@+id/settings_username"
                android:layout_marginTop="2dp"
                app:layout_constraintStart_toStartOf="@+id/settings_username"
                android:id="@+id/user_status_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/heder_bloc" android:id="@+id/settings_text_account"
            android:text="@string/text_account"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_goneMarginTop="@dimen/vertical_margin"
            android:textSize="@dimen/small_text"
            android:textStyle="bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/settings_text_account"
            android:id="@+id/btn_settings_chage_phone"
            style="@style/settings_buttons"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/heder_bloc">

        <TextView
                android:text="@string/default_phone"
                android:id="@+id/settings_phone"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/normal_text" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/click_to_number_for_change"
                android:id="@+id/settings_tv_change_phone"
                app:layout_constraintTop_toBottomOf="@+id/settings_phone"
                style="@style/small_text" android:layout_height="0dp"
                android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="@+id/settings_phone"/>
        <View
                android:id="@+id/view"
                style="@style/seporator"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/settings_tv_change_phone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/btn_settings_chage_phone"
            android:id="@+id/btn_settings_chage_login"
            style="@style/settings_buttons"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:text="@string/default_login"
                android:id="@+id/settings_login"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/normal_text" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/click_to_login_for_change"
                android:id="@+id/settings_tv_change_login"
                app:layout_constraintTop_toBottomOf="@+id/settings_login"
                style="@style/small_text" android:layout_height="0dp"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/settings_login"/>
        <View

                style="@style/seporator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/settings_tv_change_login"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/btn_settings_chage_login"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btn_settings_chage_bio"
            style="@style/settings_buttons"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:text="@string/default_bio"
                android:id="@+id/settings_bio"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/normal_text"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/write_little_about_yourself"
                android:id="@+id/settings_tv_change_bio"
                app:layout_constraintTop_toBottomOf="@+id/settings_bio"
                style="@style/small_text" android:layout_height="0dp"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/settings_bio"/>
        <View

                style="@style/seporator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/settings_tv_change_bio"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btn_settings_change_user_photo"
            android:layout_width="@dimen/settings_change_user_foto_width"
            android:layout_height="@dimen/settings_change_user_foto_hight"
            android:src="@drawable/ic_camera"
            app:civ_circle_background_color="@color/white"

            app:civ_border_width="@dimen/settings_user_foto_border"
            app:civ_border_color="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="@+id/heder_bloc"
            app:layout_constraintTop_toBottomOf="@+id/heder_bloc"/>


</androidx.constraintlayout.widget.ConstraintLayout>